--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,4 @@
-/**
-* Template Name: NiceAdmin - v2.1.0
-* Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 :root {
   scroll-behavior: smooth;
 }
@@ -334,9 +325,7 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom: 2px solid #4154f1;
 }
 
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+
 .logo {
   line-height: 1;
 }
@@ -424,9 +413,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #012970;
 }
 
-/*--------------------------------------------------------------
-# Header Nav
---------------------------------------------------------------*/
+
 .header-nav ul {
   list-style: none;
 }
@@ -530,9 +517,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #f6f9ff;
 }
 
-/*--------------------------------------------------------------
-# Sidebar
---------------------------------------------------------------*/
+
 .sidebar {
   position: fixed;
   top: 60px;
@@ -666,10 +651,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #4154f1;
 }
 
-/*--------------------------------------------------------------
-# Dashboard
---------------------------------------------------------------*/
-/* Filter dropdown */
+
 .dashboard .filter {
   position: absolute;
   right: 0px;
@@ -774,7 +756,7 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 0;
 }
 
-/* News & Updates */
+
 .dashboard .news .post-item + .post-item {
   margin-top: 15px;
 }
@@ -802,7 +784,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 95px;
 }
 
-/* Recent Sales */
+
 .dashboard .recent-sales {
   font-size: 14px;
 }
@@ -819,7 +801,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 0 0 0;
 }
 
-/* Top Selling */
+
 .dashboard .top-selling {
   font-size: 14px;
 }
@@ -837,9 +819,7 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 60px;
 }
 
-/*--------------------------------------------------------------
-# Icons list page
---------------------------------------------------------------*/
+
 .iconslist {
   display: grid;
   max-width: 100%;
@@ -870,9 +850,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #666;
 }
 
-/*--------------------------------------------------------------
-# Profie Page
---------------------------------------------------------------*/
+
 .profile .profile-card img {
   max-width: 120px;
 }
@@ -915,9 +893,7 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 120px;
 }
 
-/*--------------------------------------------------------------
-# F.A.Q Page
---------------------------------------------------------------*/
+
 .faq .basic h6 {
   font-size: 18px;
   font-weight: 600;
@@ -927,9 +903,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #6980aa;
 }
 
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
+
 .contact .info-box {
   padding: 28px 30px;
 }
@@ -1029,10 +1003,6 @@ h1, h2, h3, h4, h5, h6 {
     transform: rotate(360deg);
   }
 }
-
-/*--------------------------------------------------------------
-# Error 404
---------------------------------------------------------------*/
 .error-404 {
   padding: 30px;
 }
@@ -1063,9 +1033,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
+
 .footer {
   padding: 20px 0;
   font-size: 14px;
@@ -1081,4 +1049,9 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   font-size: 13px;
   color: #012970;
+}
+.carou{
+  
+  height: 390px;
+
 }
